added route display

--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -36,6 +36,10 @@
   }
 
   .controlbox {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+
     .themebutton {
       opacity: .7;
       transition: opacity .3s;
