--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -33,6 +33,14 @@
       font-size: 14px;
       color: #999;
     }
+
+    .subtitle {
+      line-height: 14px;
+      margin: 10px 0 0 0;
+      font-size: 14px;
+      color: white;
+      padding-left: 8px;
+    }
   }
 
   .controlbox {
