macro cell icon is added

--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -53,6 +53,10 @@
       transition: opacity .3s;
       cursor: pointer;
 
+      .weak {
+        opacity: .8;
+      }
+
       &:hover {
         opacity: 1;
       }
